[gd_scene load_steps=17 format=3 uid="uid://cs8axh0w5ak8y"]

[ext_resource type="Material" uid="uid://cjvbrquhc3adf" path="res://models/cyclorama/M_Cyclorama.tres" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://jaq5ixnryt7h" path="res://web_socket_handler.gd" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://cauavmef4j5ww" path="res://gauge.tscn" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://covd8ppvx1q4i" path="res://cyclorama.tscn" id="3_h2yge"]
[ext_resource type="Texture2D" uid="uid://di2xt60xrm8cf" path="res://models/gauge/gauge_ui/ticks.svg" id="5_5vw27"]
[ext_resource type="Script" uid="uid://d3g7atrrr5bd1" path="res://rpm_gauge_ui.gd" id="5_kek77"]
[ext_resource type="Texture2D" uid="uid://dft4nrhbanr7w" path="res://models/gauge/gauge_ui/ticks labels.svg" id="6_kek77"]
[ext_resource type="Texture2D" uid="uid://dbamsv5f5fqrt" path="res://models/gauge/gauge_ui/left needle.svg" id="7_4c57u"]
[ext_resource type="Texture2D" uid="uid://c0yybhm21sure" path="res://models/gauge/gauge_ui/right needle.svg" id="8_efxa6"]
[ext_resource type="Texture2D" uid="uid://diyydo2pnwksy" path="res://models/gauge/gauge_ui/left slider.svg" id="10_efxa6"]
[ext_resource type="Texture2D" uid="uid://cg62k0qrhn4v6" path="res://models/gauge/gauge_ui/right slider.svg" id="11_efxa6"]

[sub_resource type="GDScript" id="GDScript_1bvp3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7dm0k"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_7dm0k")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
background_color = Color(1, 1, 1, 1)
sky = SubResource("Sky_ig7tw")
tonemap_mode = 3
tonemap_exposure = 1.4
tonemap_white = 6.0
ssao_enabled = true
glow_enabled = true

[sub_resource type="ViewportTexture" id="ViewportTexture_kek77"]
viewport_path = NodePath("GaugeDisplayViewport")

[node name="Main" type="Node3D"]
script = SubResource("GDScript_1bvp3")

[node name="WebSocketHandler" type="Node" parent="."]
script = ExtResource("2_lquwl")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xm2m")

[node name="Studio" type="Node3D" parent="."]

[node name="CSGBox3D3" type="CSGBox3D" parent="Studio"]
transform = Transform3D(1.4, 0, 0, 0, -4.37114e-08, -0.92, 0, 1, -4.02145e-08, 0, 26.1, 90.9)
use_collision = true
size = Vector3(74.6, 1, 83.1)
material = ExtResource("2_1bvp3")

[node name="CSGBox3D4" type="CSGBox3D" parent="Studio"]
transform = Transform3D(1.4, 0, 0, 0, -4.37114e-08, -0.92, 0, 1, -4.02145e-08, 0, 26.1, -87)
use_collision = true
size = Vector3(74.6, 1, 83.1)
material = ExtResource("2_1bvp3")

[node name="CSGBox3D2" type="CSGBox3D" parent="Studio"]
transform = Transform3D(1.4, 0, 0, 0, 1, 0, 0, 0, 2.3, 0, 57.6, 0)
use_collision = true
size = Vector3(74.6, 1, 83.1)
material = ExtResource("2_1bvp3")

[node name="Cyclorama" parent="Studio" instance=ExtResource("3_h2yge")]
transform = Transform3D(2.8912, 0, 0, 0, 3.556, 0, 0, 0, 5.89824, 2.4, 1.9, 0.3)

[node name="Lighting" type="Node3D" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, 34.2049, 9.4, 12.5661)
light_energy = 16.0
light_size = 0.207
light_specular = 4.864
shadow_enabled = true
shadow_bias = 1.394
spot_range = 34.3
spot_angle = 46.6556

[node name="SpotLight3D2" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, 0.939693, -29.7951, 9.4, 12.5661)
light_energy = 16.0
light_size = 0.207
light_specular = 4.864
shadow_enabled = true
shadow_bias = 1.394
spot_range = 34.3
spot_angle = 46.6556

[node name="SpotLight3D4" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20.4, 55.8, -48.4)
light_energy = 2.131
shadow_enabled = true
spot_range = 103.3
spot_angle = 89.99

[node name="SpotLight3D5" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -21.1, 55.8, -48.4)
light_energy = 2.131
shadow_enabled = true
spot_range = 103.3
spot_angle = 89.99

[node name="SpotLight3D6" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20.4, 55.8, 0.899998)
light_energy = 2.131
shadow_enabled = true
spot_range = 103.3
spot_angle = 89.99

[node name="SpotLight3D7" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -21.1, 55.8, 0.899998)
light_energy = 2.131
shadow_enabled = true
spot_range = 103.3
spot_angle = 89.99

[node name="SpotLight3D8" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20.4, 55.8, 50.1)
light_energy = 2.131
shadow_enabled = true
spot_range = 103.3
spot_angle = 89.99

[node name="SpotLight3D9" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -21.1, 55.8, 50.1)
light_energy = 2.131
shadow_enabled = true
spot_range = 103.3
spot_angle = 89.99

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.6, 15.4, 15)

[node name="Gauge" parent="." instance=ExtResource("3_1bvp3")]
transform = Transform3D(-8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, 2.9, 16.5, 1.8)

[node name="GaugeDisplayScreen" type="Sprite3D" parent="Gauge"]
transform = Transform3D(-3.93403e-08, 0, 0.9, 0, 0.9, 0, -0.9, 0, -3.93403e-08, -3.434, 0.08, -0.013)
texture = SubResource("ViewportTexture_kek77")

[node name="GaugeDisplayViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(1200, 1200)

[node name="RpmGaugeUI" type="Control" parent="GaugeDisplayViewport"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_kek77")

[node name="Ticks" type="TextureRect" parent="GaugeDisplayViewport/RpmGaugeUI"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 1200.0
texture = ExtResource("5_5vw27")
expand_mode = 1

[node name="Labels" type="TextureRect" parent="GaugeDisplayViewport/RpmGaugeUI"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 1200.0
texture = ExtResource("6_kek77")
expand_mode = 1

[node name="EngineNeedle" type="TextureRect" parent="GaugeDisplayViewport/RpmGaugeUI"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 1200.0
pivot_offset = Vector2(600, 600)
texture = ExtResource("7_4c57u")
expand_mode = 1

[node name="ElectromotorNeedle" type="TextureRect" parent="GaugeDisplayViewport/RpmGaugeUI"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 1200.0
pivot_offset = Vector2(600, 600)
texture = ExtResource("8_efxa6")
expand_mode = 1

[node name="EngineRadialSlider" type="TextureProgressBar" parent="GaugeDisplayViewport/RpmGaugeUI"]
custom_minimum_size = Vector2(1200, 1200)
layout_mode = 0
offset_right = 1200.0
offset_bottom = 1200.0
max_value = 8000.0
fill_mode = 4
radial_initial_angle = 207.3
radial_fill_degrees = 114.1
nine_patch_stretch = true
texture_progress = ExtResource("10_efxa6")
tint_progress = Color(0.576229, 0.127759, 0.164638, 1)

[node name="ElectromotorRadialSlider" type="TextureProgressBar" parent="GaugeDisplayViewport/RpmGaugeUI"]
custom_minimum_size = Vector2(1200, 1200)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
max_value = 10000.0
fill_mode = 5
radial_initial_angle = 151.4
radial_fill_degrees = 143.1
nine_patch_stretch = true
texture_progress = ExtResource("11_efxa6")
tint_progress = Color(3.03224e-06, 0.423726, 0.585879, 1)
